FEAT macro-layout responsive

--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,9 @@ DIVISIONE MACRO-LAYOUT
     height: 90px;
     background-color: var(--darkgray);
 }
+
+@media screen and (max-width: 630px) {
+    .header{
+        width: 50px;
+    }
+}
