--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ HEADER SIDE BAR
     justify-content: space-between;
     flex-direction: column;
     color: white;
-    width: 200px;
+    width: 100%;
     height: calc(100vh - 90px);
 }
 
@@ -277,7 +277,7 @@ HEADER SIDE BAR
 }
 
 .bottom-side-bar{
-    padding: 0 22px;
+    padding: 22px 22px 0;
 }
 
 .bottom-side-bar .side_bar_download .arrow-circle{
@@ -348,7 +348,9 @@ HEADER SIDE BAR
 }
 
 
-
+/**********************************
+MEDIA QUERY
+**********************************/
 
 
 @media screen and (max-width: 900px) {
@@ -447,11 +449,31 @@ HEADER SIDE BAR
         margin-left: 3px;
     }
 
-    .header .header_container{
+    .header .header_container .col .none{
         display: none;
     }
-    
 
+    .top-side-bar .side_bar_logo{
+        display: block;
+        width: 50px;
+        height: 50px;
+        margin: 0;
+        padding: 5px 8px 0;
+    }
+
+
+    .top-side-bar .header_nav ul {
+        align-items: center;
+    }
+
+    .header_nav .nav_text i {
+        padding: 10px 0;
+        font-size: 25px;
+    }
+
+    .top-side-bar .side_bar_logo .small-logo {
+        display: block;
+    }
 
 }
 
@@ -471,13 +493,15 @@ HEADER SIDE BAR
 
 
 @media screen and (max-height: 690px) {
-    .header_playlist .playlist {
-        display: none;
+    .header_container .col:first-child{
+        overflow: hidden;
     }
 }
 
-@media screen and (max-height: 350px) {
-    .bottom-side-bar {
+
+@media screen and (max-height: 375px) {
+    .header_container .header_playlist,
+    .header_container .col:last-child {
         display: none;
-    } 
+    }
 }
