--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,27 @@ HEADER SIDE BAR
     font-size: 16px;
 }
 
+/**********************************
+MAIN UPGRADE
+**********************************/
+
+.container-upgrade .row{
+    align-items: center;
+    height: 100%;
+    justify-content: flex-end;
+    padding-right: 5px;
+}
+
+.container-upgrade .upgrade button{
+    background-color: var(--darkgray);
+    color: white;
+    line-height: 42px;
+    border: 2px solid white;
+    padding: 0 42px;
+    border-radius: 25px;
+}
+
+
 
 /**********************************
 MEDIA QUERY
