--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,6 @@ a .graytext:hover{
 
 
 
-
-
 /**********************************
 FOOTER PLAYER
 **********************************/
@@ -178,8 +176,14 @@ FOOTER PLAYER
 .impostation-song_time .time-bar .time_bar_on{
     height: 4px;
     background-color: white;
-    width: 55%;
     border-radius: 25px;
+    animation: progress 60s linear;
+}
+
+
+@keyframes progress {
+    from {width: 0%;}
+    to {width: 100%;}
 }
 
 .impostation-song_time p{
@@ -206,8 +210,18 @@ FOOTER PLAYER
 .player_style-song .style-song_volume .volume-bar .volume_bar_on{
     height: 4px;
     background-color: white;
-    width: 20%;
     border-radius: 25px;
+    animation: volume 8s linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes volume {
+    0% {width: 0%;}
+    20% {width: 80%;}
+    40% {width: 60%;}
+    60% {width: 100%;}
+    90% {width: 60%;}
+    100% {width: 0%;}
 }
 
 /**********************************
