--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 html{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Krona One', sans-serif;
 }
 
 img{
@@ -439,6 +439,7 @@ HEADER SIDE BAR
 }
 
 .bottom-side-bar .user_circle{
+    overflow: hidden;
     width: 22px;
     height: 22px;
     background-color: gray;
@@ -450,7 +451,7 @@ HEADER SIDE BAR
 }
 
 .bottom-side-bar .user_circle i{
-    font-size: 15px;
+    font-size: 25px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -481,7 +482,7 @@ MAIN UPGRADE
     align-items: center;
     height: 100%;
     justify-content: flex-end;
-    padding-right: 5px;
+    padding-right: 15px;
 }
 
 .container-upgrade .upgrade button{
