--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,7 @@ MAIN CONTENT
 **********************************/
 
 main.main{
-    overflow: scroll;
+    overflow: auto;
     position: relative;
 }
 
@@ -542,7 +542,7 @@ main.main{
 }
 
 .container-content .card_content{
-    padding: 30px 15px 0;
+    padding: 35px 15px 0;
 }
 
 .container-content:last-child {
@@ -610,7 +610,7 @@ main.main{
 }
 
 .container-content .card_content .card_titol p{
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .container-content .popular .card_content .img_card img{
